[project]
name = "comfyui-ascii-art"
description = "ascii art preprocessors in ComfyUI"
version = "1.0"
license = { text = "MIT License" }
dependencies = [
  "pillow==9.5",
]

[project.urls]
Repository = ""
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "IrisRainbowNeko"
DisplayName = "ascii-art-comfyui"
Icon = ""